# sage

./: .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml
.github/workflows/: quality.yml
configs/: baseline.yaml  fifo.yaml  sjf.yaml  stress.yaml
data/: README.md  sample_requests.csv  stress_requests.csv
docs/: architecture.md  case-study.md  metrics.md  roadmap.md  scheduling-policies.md  simulation-model.md
examples/: compare_fifo_vs_sjf.py  run_baseline.py
src/sage_sim/: __init__.py  cli.py  clock.py  config.py  models.py  resources.py  simulation.py  workload.py
src/sage_sim/metrics/: __init__.py  collector.py  summary.py  utilization.py
src/sage_sim/reporting/: __init__.py  charts.py  export.py  paths.py
src/sage_sim/scheduling/: __init__.py  base.py  batch_by_model.py  deadline_aware.py  fifo.py  priority.py  shortest_job_first.py
src/sage_sim/utils/: random.py  time.py
tests/: __init__.py  test_batch_by_model_scheduler.py  test_config.py  test_deadline_aware_scheduler.py  test_fifo_scheduler.py  test_metrics.py  test_priority_scheduler.py  test_reporting.py  test_scheduler_factory.py  test_simulation_policy_effects.py  test_simulation_smoke.py  test_sjf_scheduler.py  test_workload.py
